# aihypr

./: .gitignore  README.md  ROFI_USAGE.md  SSH_BACKUP_USAGE.md  WALLPAPERS_USAGE.md  install.sh
ai-themer/: README.md  ai-themer-pick  demo_simulation.py  pyproject.toml  test_color_extraction.py
ai-themer/src/ai_themer/: __init__.py  cli.py  rofi_picker.py
ai-themer/src/ai_themer/applications/: __init__.py
ai-themer/src/ai_themer/core/: __init__.py  color_extractor.py  color_types.py  template_engine.py  theme_applier.py
ai-themer/src/ai_themer/utils/: __init__.py  file_utils.py
ai-themer/templates/alacritty/: colors.toml.j2
ai-themer/templates/hyprland/: colors.conf.j2
ai-themer/templates/rofi/: colors.rasi.j2
ai-themer/templates/swaync/: colors.css.j2
ai-themer/templates/waybar/: colors.css.j2
config/alacritty/: alacritty.toml  colors.toml
config/btop/: README.md  btop.conf
config/btop/themes/: catppuccin-mocha.theme
config/fish/: README.md  colors.fish  config.fish
config/fish/functions/: fish_prompt.fish
config/hypr/: hyprland.conf
config/hypr/conf/: appearance.conf  autostart.conf  colors.conf  environment.conf  input.conf  keybindings.conf  layouts.conf  misc.conf  monitors.conf  permissions.conf  programs.conf  window-rules.conf
config/rofi/: colors.rasi  config.rasi
config/rofi/themes/: default.rasi
config/swaync/: colors.css  config.json  style.css
config/waybar/: colors.css  config.jsonc  style.css
scripts/: ai-commit.sh  ssh-manager.sh
scripts/media/: README_enhanced.md  organize_media_enhanced.fish
scripts/post/: 05-emby-interactive.sh
wallpapers/: README.md
wallpapers/abstract/: .gitkeep
wallpapers/cityscape/: .gitkeep
wallpapers/cyberpunk/: .gitkeep
wallpapers/minimal/: .gitkeep
wallpapers/nature/: .gitkeep
wallpapers/space/: .gitkeep
