[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-themer"
version = "1.0.0"
description = "AI-powered theming system that extracts colors from wallpapers and applies them across your Linux system"
authors = [
    {name = "AI Themer Project", email = "contact@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["theming", "wallpaper", "color", "linux", "hyprland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "Pillow>=9.0.0",
    "scikit-learn>=1.0.0",
    "colorspacious>=1.1.2",
    "Jinja2>=3.0.0",
    "watchdog>=2.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "colorthief>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.900",
]
advanced = [
    "opencv-python>=4.5.0",
]

[project.urls]
"Homepage" = "https://github.com/username/ai-themer"
"Bug Reports" = "https://github.com/username/ai-themer/issues"
"Source" = "https://github.com/username/ai-themer"

[project.scripts]
ai-themer = "ai_themer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 